# collectcall

./: API_AND_CALL_SCENARIOS.md  CMakeLists.txt  Makefile  README.md  app_logger.h  collect_call.env.example  handlers.h  options.h  runtime_config.h
env/: prod-local-sipp.env
include/: api_mapping.h  b2bua.h  config.h  env_loader.h  handlers.h  prompt_mapping.h  runtime_config.h  session.h  utils.h  validation.h
src/: api_mapping.c  app_logger.c  b2bua.c  env_loader.c  leg_a.c  leg_b.c  main.c  options.c  prompt_mapping.c  runtime_config.c  session.c  utils.c  validation.c
systemd/: collect_call.service
wav/: README.txt  wav_mapping.conf
